# Autorace_competition_2023

./: README.md  navigation_node.py  requirements.txt  test.ipynb
autorace_camera/: package.xml  setup.cfg  setup.py
autorace_camera/autorace_camera/: core_node_mission.py  image_compensation.py  image_projection.py
autorace_camera/calibration/extrinsic_calibration/: compensation.yaml  projection.yaml
autorace_camera/launch/: extrinsic_camera_calibration.launch.py
autorace_core_unitedROS/: package.xml  setup.cfg  setup.py
autorace_core_unitedROS/autorace_core_unitedROS/: avoid_obstacles.py  finish.py  intersection.py  lane_detect.py  lane_follow.py  left_sign_detect.py  obstacles.py  parking.py  pedestrian_crossing.py  robot_rotator.py  sign_detection.py  traffic_light.py  traffic_light_detect.py  tunnel.py
autorace_core_unitedROS/config/: base.yaml  intersection.yaml  obstacle_avoid.yaml  params.yaml  parking.yaml  pedestrian_crossing.yaml  tunnel.yaml
autorace_core_unitedROS/launch/: autorace_core.launch.py
competition/: package.xml  setup.cfg  setup.py
competition/competition/: avoid_obstacles.py  detection.py  lane_detect.py  lane_follow.py  lane_moving.py  left_right_signs.py  sign_detection.py  traffic_light_detect.py
competition/launch/: main.launch.py
competition/model/yolov5/: requirements.txt
referee_console/: setup.cfg
robot_bringup/config/: autorace_2023.rviz
robot_rotate_interface/: CMakeLists.txt  package.xml
robot_rotate_interface/msg/: Rotate.msg
