<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autorace_camera</name>
  <version>1.1.0</version>
  <description>
    AutoRace ROS2 package that processes the image
  </description>
  <license>Apache 2.0</license>
  <author email="v.kudinov@g.nsu.ru">Vitalii Kudinov</author>
  <author>Vitalii Kudinov</author>
  <maintainer email="v.kudinov@g.nsu.ru">Vitalii Kudinov</maintainer>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-enum34</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
